deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lesson2-dep
  labels:
    app: lesson2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-server-lesson2
  template:
    metadata:
      labels:
        app: http-server-lesson2
    spec:
      containers:
        - name: lesson2
          image: tapakah002/kubehomework1:1.1.8
          ports:
            - name: http
              containerPort: 8000
