ingress-helm.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuber-app-ingress-helm
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: lesson2-service
                port:
                  number: 8000
